--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -100,10 +100,18 @@ header ul li a {
 	justify-content: flex-end;
 	padding-right: 50px;
 	margin-top: 50px;
+	box-shadow:;
 }
 
 .content .imgBox img{
-	max-width: 550px;
+	max-width: 600px;
+}
+
+.content .imgBox h4{
+	margin-left: 10rem;
+	margin-top: -10rem;
+	color: #fff;
+	font-size: 2rem;
 }
 
 .thumb{
@@ -158,6 +166,7 @@ header ul li a {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: #DB4727;
+	background: #ac0b4f;
 	clip-path: circle(600px at right 1000px);
 }
+
