--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ section{
 	position: relative;
 	width: 100%;
 	min-height: 100vh;
-	padding: 100px;
+	padding: 20px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
@@ -104,7 +104,7 @@ header ul li a {
 }
 
 .content .imgBox img{
-	max-width: 600px;
+	max-width: 800px;
 }
 
 .content .imgBox h4{
@@ -120,6 +120,7 @@ header ul li a {
 	bottom: 20px;
 	transform: translateX(-50%);
 	display: flex;
+	margin-top: 5rem;
 }
 
 .thumb li{
@@ -135,7 +136,7 @@ header ul li a {
 }
 
 .thumb li img{
-	max-width: 250px;
+	max-width: 200px;
 }
 
 .sci{
@@ -167,6 +168,112 @@ header ul li a {
 	width: 100%;
 	height: 100%;
 	background: #ac0b4f;
-	clip-path: circle(600px at right 1000px);
+	clip-path: circle(600px at right 800px);
 }
 
+
+@media (max-width: 931px){
+	header{
+		padding: 20px;
+	}
+
+	header .logo {
+		max-width: 60px;
+	}
+
+	header ul {
+		display: none;
+	}
+
+	.toggle{
+		position: relative;
+		width: 30px;
+		height: 30px;
+		cursor: pointer;
+		background: url(../img/menu.png);
+		background-size: 30px;
+		background-position: center;
+		background-repeat: no-repeat;
+		filter: invert(1);
+		z-index: 11;
+	}
+
+
+	.toggle.active{
+		background: url(../img/close.png);
+		background-size: 30px;
+		background-position: center;
+		background-repeat: no-repeat;
+		filter: invert(1);
+	}
+
+	header ul.navigation.active{
+		position: fixed;
+		top:0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		flex-direction: column;
+		background: #fff;
+		z-index: 10;
+	}
+
+	header ul li a{
+		display: inline-block;
+		color: #333;
+		font-size: 1.5em;
+		font-weight: 400;
+		margin: 5px 0;
+		text-decoration: none;
+	}
+
+	section {
+		padding: 20px 30px 120px;
+	}
+
+	.content{
+		flex-direction: column;
+		margin-top: 100px;
+	}
+
+	.content .textBox h2{
+		font-size: 2.5em;
+		margin-bottom: 15px;
+	}
+
+	.content .textBox{
+		max-width: 100%;
+	}
+
+	.content .imgBox{
+		max-width: 100%;
+		justify-content: center;
+		/*margin-bottom: 5rem;*/
+	}
+
+	.content .imgBox img{
+		max-width: 350px;
+	}
+
+	.thumb li img{
+		max-width: 50px;
+	}
+
+	.circle{
+		/*clip-path: circle(400px at center bottom);*/
+		clip-path: circle(45% at left bottom);
+	}
+
+	.sci{
+		background: #ff3b40;
+		right: 0;
+		margin-right: -3.5rem;
+		width: 50px;
+		border-top-left-radius: 5px;
+		border-bottom-left-radius: 5px;
+	}
+
+}
