--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,279 +1,93 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:200, 300, 400, 500, 600, 700, 800, 900&display=swap');
-
-*{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	font-family: 'Poppins', sans-serif;
+body {
+  margin: 0;
+  margin-top: 1.5rem;
 }
 
-section{
-	position: relative;
-	width: 100%;
-	min-height: 100vh;
-	padding: 20px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	background: #fff;
+.logo {
+  margin-top: -15px;
+  width: 50px;
 }
 
-header{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	padding: 20px 100px;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+.nav {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
 }
 
-header .logo{
-	position: relative;
-	max-width: 40px;
+ul {
+  display: flex;
 }
 
-header ul{
-	position: relative;
-	display: flex;
+li {
+  list-style-type: none;
+  padding: 20px;
 }
 
-header ul li{
-	list-style: none;
+.hero-section {
 }
 
-header ul li a {
-	display: inline-block;
-	color: #333;
-	font-weight: 400;
-	margin-left: 40px;
-	text-decoration: none;
+.row {
+  display: flex;
 }
 
-.content{
-	position: relative;
-	width: 100%;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
+.container {
+  width: 20%;
+  position: relative;
+  /* margin-left:.5rem; */
+  transition: transform 500ms;
 }
 
-.content .textBox{
-	position: relative;
-	max-width: 600px;
+.container img {
+  width: 100%;
+  opacity: 1;
+  height: auto;
+  transition: 0.5s ease-in-out;
 }
 
-.content .textBox h2{
-	color: #333;
-	font-size: 4em;
-	line-height: 1.4em;
-	font-weight: 500;
-	text-transform: uppercase;
+.row .container:focus,
+.row .container:hover {
+  transform: scale(1.5);
+  z-index: 1;
 }
 
-.content .textBox h2 span{
-	color: #ff3b40;
-	font-size: 1.2em;
-	font-weight: 900;
+.middle {
+  transition: 0.5s ease;
+  opacity: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 50%;
+  height: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-family: "Nanum Gothic", sans-serif;
 }
 
-.content .textBox p{
-	color: #333;
+.container:hover .middle {
+  opacity: 1;
 }
 
-.content .textBox a{
-	display: inline-block;
-	margin-top: 20px;
-	padding: 8px 20px;
-	background: #ff3b40;
-	color: #fff;
-	border-radius: 40px;
-	font-weight: 500;
-	letter-spacing: 1px;
-	text-decoration: none;
+.text {
+  color: #fff;
+  font-size: 16px;
+  padding: 11px 13px;
 }
 
-.content .imgBox{
-	width: 600px;
-	display: flex;
-	justify-content: flex-end;
-	padding-right: 50px;
-	margin-top: 50px;
-	box-shadow:;
+.contact {
+  margin-top: 7rem;
+  width: 100%;
 }
 
-.content .imgBox img{
-	max-width: 800px;
+.footer {
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  bottom: 0;
+  padding: 30px;
+  width: 100%;
 }
 
-.content .imgBox h4{
-	margin-left: 10rem;
-	margin-top: -10rem;
-	color: #fff;
-	font-size: 2rem;
-}
-
-.thumb{
-	position: absolute;
-	left: 40%;
-	bottom: 20px;
-	transform: translateX(-50%);
-	display: flex;
-	margin-top: 5rem;
-}
-
-.thumb li{
-	list-style: none;
-	display: inline-block;
-	margin: 0 30px;
-	cursor: pointer;
-	transition: 0.5s;
-}
-
-.thumb li:hover{
-	transform: translateY(-15px);
-}
-
-.thumb li img{
-	max-width: 200px;
-}
-
-.sci{
-	position: absolute;
-	top: 50%;
-	right: 30px;
-	transform: translateY(-50%);
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-}
-
-.sci li{
-	list-style: none;
-}
-
-.sci li a{
-	display: inline-block;
-	margin: 5px 0;
-	transform: scale(0.6);
-	filter: invert(1);
-}
-
-.circle{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: #ac0b4f;
-	clip-path: circle(600px at right 800px);
-}
-
-
-@media (max-width: 931px){
-	header{
-		padding: 20px;
-	}
-
-	header .logo {
-		max-width: 60px;
-	}
-
-	header ul {
-		display: none;
-	}
-
-	.toggle{
-		position: relative;
-		width: 30px;
-		height: 30px;
-		cursor: pointer;
-		background: url(../img/menu.png);
-		background-size: 30px;
-		background-position: center;
-		background-repeat: no-repeat;
-		filter: invert(1);
-		z-index: 11;
-	}
-
-
-	.toggle.active{
-		background: url(../img/close.png);
-		background-size: 30px;
-		background-position: center;
-		background-repeat: no-repeat;
-		filter: invert(1);
-	}
-
-	header ul.navigation.active{
-		position: fixed;
-		top:0;
-		left: 0;
-		width: 100%;
-		height: 100%;
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		flex-direction: column;
-		background: #fff;
-		z-index: 10;
-	}
-
-	header ul li a{
-		display: inline-block;
-		color: #333;
-		font-size: 1.5em;
-		font-weight: 400;
-		margin: 5px 0;
-		text-decoration: none;
-	}
-
-	section {
-		padding: 20px 30px 120px;
-	}
-
-	.content{
-		flex-direction: column;
-		margin-top: 100px;
-	}
-
-	.content .textBox h2{
-		font-size: 2.5em;
-		margin-bottom: 15px;
-	}
-
-	.content .textBox{
-		max-width: 100%;
-	}
-
-	.content .imgBox{
-		max-width: 100%;
-		justify-content: center;
-		/*margin-bottom: 5rem;*/
-	}
-
-	.content .imgBox img{
-		max-width: 350px;
-	}
-
-	.thumb li img{
-		max-width: 50px;
-	}
-
-	.circle{
-		/*clip-path: circle(400px at center bottom);*/
-		clip-path: circle(45% at left bottom);
-	}
-
-	.sci{
-		background: #ff3b40;
-		right: 0;
-		margin-right: -3.5rem;
-		width: 50px;
-		border-top-left-radius: 5px;
-		border-bottom-left-radius: 5px;
-	}
-
+a {
+  text-decoration: none;
+  color: black;
 }
