--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,13 +35,15 @@ li {
   position: relative;
   /* margin-left:.5rem; */
   transition: transform 500ms;
+  display: block;
 }
 
 .container img {
   width: 100%;
   opacity: 1;
   height: auto;
-  transition: 0.5s ease-in-out;
+  display: block;
+  /* transition: 0.5s ease-in-out; */
 }
 
 .row .container:focus,
@@ -91,3 +93,25 @@ a {
   text-decoration: none;
   color: black;
 }
+
+/* @media only screen and (max-width: 1500px) {
+  text {
+    font-size: 10px;
+    padding: 32px 16px;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  body {
+    background-color: red;
+  }
+  .container {
+    width: 100%;
+  }
+
+  .row .container:focus,
+  .row .container:hover {
+    transform: none;
+    z-index: 1;
+  }
+} */
