--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,23 +56,28 @@ li {
   transition: 0.5s ease;
   opacity: 0;
   position: absolute;
-  top: 50%;
+  top: 30%;
   left: 50%;
   width: 50%;
-  height: 50%;
+  height: 90%;
   transform: translate(-50%, -50%);
   text-align: center;
   font-family: "Nanum Gothic", sans-serif;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .container:hover .middle {
-  opacity: 1;
+  opacity: 0.7;
+  /* background-color: rgba(255, 254, 245, 0.5); */
+  margin-top: -1rem;
 }
 
 .text {
   color: #fff;
-  font-size: 16px;
-  padding: 11px 13px;
+  font-size: 14px;
+  padding: 5px 5px;
 }
 
 .contact {
@@ -94,7 +99,7 @@ a {
   color: black;
 }
 
-/* @media only screen and (max-width: 1500px) {
+@media only screen and (max-width: 1500px) {
   text {
     font-size: 10px;
     padding: 32px 16px;
@@ -114,4 +119,4 @@ a {
     transform: none;
     z-index: 1;
   }
-} */
+}
