--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,5 @@
 body {
   margin: 0;
-  margin-top: 1.5rem;
 }
 
 .logo {
@@ -30,7 +29,7 @@ li {
   display: flex;
 }
 
-.container {
+.container-product {
   width: 20%;
   position: relative;
   /* margin-left:.5rem; */
@@ -38,7 +37,7 @@ li {
   display: block;
 }
 
-.container img {
+.container-product img {
   width: 100%;
   opacity: 1;
   height: auto;
@@ -46,8 +45,8 @@ li {
   /* transition: 0.5s ease-in-out; */
 }
 
-.row .container:focus,
-.row .container:hover {
+.row .container-product:focus,
+.row .container-product:hover {
   transform: scale(1.5);
   z-index: 1;
 }
@@ -63,12 +62,9 @@ li {
   transform: translate(-50%, -50%);
   text-align: center;
   font-family: "Nanum Gothic", sans-serif;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
 }
 
-.container:hover .middle {
+.container-product:hover .middle {
   opacity: 0.7;
   /* background-color: rgba(255, 254, 245, 0.5); */
   margin-top: -1rem;
@@ -99,6 +95,11 @@ a {
   color: black;
 }
 
+.loading-img {
+  width: 300px;
+  margin-top: 5rem;
+}
+
 @media only screen and (max-width: 1500px) {
   text {
     font-size: 10px;
@@ -108,14 +109,14 @@ a {
 
 @media only screen and (max-width: 800px) {
   body {
-    background-color: red;
+    background-color: coral;
   }
-  .container {
+  .container-product {
     width: 100%;
   }
 
-  .row .container:focus,
-  .row .container:hover {
+  .row .container-product:focus,
+  .row .container-product:hover {
     transform: none;
     z-index: 1;
   }
