--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,7 +131,7 @@ p {
   width: 300px;
   height: 500px;
   box-shadow: 5px 5px 20px rgb(197, 195, 195);
-  margin: 0;
+  margin: 10px;
 }
 
 .project-container {
